[gd_scene load_steps=10 format=3 uid="uid://fj2c6cebl8pk"]

[ext_resource type="PackedScene" uid="uid://cd76jpqxb0eqo" path="res://Games/flappy_bird/flappy_scenes/ground.tscn" id="1_rlb8a"]
[ext_resource type="Script" path="res://Games/flappy_bird/flappy_main.gd" id="1_y37re"]
[ext_resource type="Texture2D" uid="uid://h2ss1trfuva0" path="res://Assets/flappy_assets/bg.png" id="2_4fwav"]
[ext_resource type="PackedScene" uid="uid://wvw586u8r01h" path="res://Games/flappy_bird/flappy_scenes/bird.tscn" id="3_41wc1"]
[ext_resource type="Script" path="res://Games/flappy_bird/flappy_scenes/ground.gd" id="3_85j6f"]
[ext_resource type="Script" path="res://Games/flappy_bird/flappy_scenes/pilot.gd" id="6_60jxw"]
[ext_resource type="Texture2D" uid="uid://uoq3jhwpvq60" path="res://Assets/Plane/Fly (1).png" id="7_y6fyh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ovamc"]
bg_color = Color(0.254902, 0.752941, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6kp5"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2

[node name="FlappyMain" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_y37re")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -51.0
offset_right = 1154.0
offset_bottom = 717.0
texture = ExtResource("2_4fwav")

[node name="ground" parent="." instance=ExtResource("1_rlb8a")]
z_index = 1
position = Vector2(-3, 635)
script = ExtResource("3_85j6f")

[node name="pilot" parent="." instance=ExtResource("3_41wc1")]
position = Vector2(96, 327)
scale = Vector2(2, 2)
script = ExtResource("6_60jxw")

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="logout" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 547.0
offset_right = 79.0
offset_bottom = 583.0
text = "⬅️ logout
"

[node name="ScoreBoard" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 912.0
offset_top = 19.0
offset_right = 1140.0
offset_bottom = 83.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ovamc")

[node name="ApplePic" type="Panel" parent="ScoreBoard"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -25.0
offset_right = 57.0
offset_bottom = 25.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c6kp5")

[node name="TextureRect" type="TextureRect" parent="ScoreBoard/ApplePic"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_y6fyh")
expand_mode = 3

[node name="ScoreLabel" type="Label" parent="ScoreBoard"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -17.0
offset_right = 56.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Score"

[node name="Score" type="Label" parent="ScoreBoard"]
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -16.0
offset_right = -9.0
offset_bottom = 19.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "0"

[connection signal="area_entered" from="ground" to="ground" method="_on_area_entered"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="pressed" from="logout" to="." method="_on_logout_pressed"]
